version/0.19/_sources/api/solver/_autosummary/settings/wave_group_inputs.rst.txt
:orphan:

.. _wave_group_inputs:

wave_group_inputs
=================

.. autoclass:: ansys.fluent.core.solver.settings_241.wave_group_inputs.wave_group_inputs
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`wave_group_inputs_child <wave_group_inputs_child>`


.. rubric:: Included in:

================================   =======================

Parent                                             Summary

================================   =======================
:ref:`multiphase <multiphase_6>`       Help not available.

================================   =======================

