version/0.27/_sources/api/solver/_autosummary/settings/wave_group_inputs.rst.txt
:orphan:

.. _wave_group_inputs:

wave_group_inputs
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.wave_group_inputs
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`wave_group_inputs_child <wave_group_inputs_child>`


.. rubric:: Included in:

==================================   ============================================================

Parent                                                                                    Summary

==================================   ============================================================
:ref:`multiphase_6 <multiphase_6>`       Allows to change multiphase model variables or settings.

==================================   ============================================================

